# claudegnostic

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  pyproject.toml
.beads/: config.yaml  interactions.jsonl  metadata.json
.github/workflows/: ci.yml
src/claudegnostic/: __init__.py  __main__.py  cli.py  ingest.py  parser.py  schema.py  storage.py
src/claudegnostic/analysis/: __init__.py  _connect.py  archaeology.py  cost.py  prices.toml  productivity.py
src/claudegnostic/dashboard/: __init__.py  _db.py  _empty.py  _filters.py  _state.py  app.py  cli.py
src/claudegnostic/dashboard/pages/: 01_overview.py  02_archaeology.py  03_productivity.py
src/claudegnostic/report/: __init__.py  filters.py  plots.py  render.py
src/claudegnostic/report/templates/: report.html.j2  styles.css
tests/: conftest.py  test_cli.py  test_fixtures.py  test_ingest.py  test_parser.py  test_storage.py
tests/analysis/: conftest.py  test_archaeology.py  test_connect.py  test_cost.py  test_productivity.py
tests/dashboard/: test_archaeology_page.py  test_chrome.py  test_productivity_page.py
tests/fixtures/sessions/: compaction.jsonl  interrupted.jsonl  malformed.jsonl  normal.jsonl  sidechain.jsonl
tests/report/: conftest.py  test_render.py
