[project]
name = "claudegnostic"
version = "0.1.0"
description = "Diagnostics and statistics for Claude Code sessions"
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "paishe01", email = "paishe01@stepstone.com" }]
keywords = ["claude", "claude-code", "cli", "diagnostics", "statistics"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Utilities",
]
dependencies = [
    "typer>=0.15.0",
    "rich>=13.9.0",
    "polars>=1.20.0",
    "duckdb>=1.1.0",
    "pyarrow>=18.0.0",
    "jinja2>=3.1.0",
    "plotnine>=0.13.0",
]

[project.scripts]
claudegnostic = "claudegnostic.cli:app"

[project.urls]
Homepage = "https://github.com/paishe01/claudegnostic"
Repository = "https://github.com/paishe01/claudegnostic"
Issues = "https://github.com/paishe01/claudegnostic/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/claudegnostic"]

[tool.hatch.build.targets.wheel.force-include]
"src/claudegnostic/report/templates" = "claudegnostic/report/templates"
"src/claudegnostic/analysis/prices.toml" = "claudegnostic/analysis/prices.toml"

[dependency-groups]
dev = [
    "pytest>=8.3.0",
    "pytest-cov>=6.0.0",
    "mypy>=1.13.0",
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
]

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "SIM", # flake8-simplify
    "RUF", # ruff-specific
]
ignore = []

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B"]
"src/claudegnostic/cli.py" = ["B008"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.13"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false

[[tool.mypy.overrides]]
module = ["plotnine.*", "matplotlib.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--cov=claudegnostic",
    "--cov-report=term-missing",
]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.coverage.run]
source = ["src/claudegnostic"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]
